fix: preferred locations dropdown horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,5 +37,16 @@ body{
   }
 }
 
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
 
 
